# oxidize

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: cli.rs  config.rs  main.rs  telemetry.rs
crates/app/src/grpc/: server.rs  staff_service.rs  tenant_service.rs
crates/app/src/http/: handlers.rs  mod.rs  router.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  lib.rs
crates/domain/src/model/: mod.rs  staff.rs  staff_role.rs  tenant.rs  tenant_tag_type.rs
crates/domain/src/repository/: mod.rs  staff.rs  tenant.rs
crates/infrastructure/: Cargo.toml  build.rs
crates/infrastructure/src/: lib.rs  registry.rs
crates/infrastructure/src/cmd/: mod.rs
crates/infrastructure/src/database/: mod.rs  staff.rs  tenant.rs
crates/infrastructure/src/environment/: mod.rs
crates/infrastructure/src/grpc/: mod.rs  server.rs  staff_service.rs  tenant_service.rs
crates/infrastructure/src/http/: handlers.rs  mod.rs  router.rs
crates/infrastructure/src/otel/: mod.rs
crates/injection/: Cargo.toml
crates/injection/src/: lib.rs
crates/usecase/: Cargo.toml
crates/usecase/src/: lib.rs
crates/usecase/src/input/: staff.rs  tenant.rs
crates/usecase/src/interactor/: staff.rs  tenant.rs
crates/usecase/src/output/: staff.rs  tenant.rs
db/migrations/: 20241223000002_create_staffs.sql
docker/: Dockerfile
docs/: go-vs-rust.md
migrations/: 20241223000001_create_tenants.sql
proto/: buf.yaml  staff.proto  tenant.proto
