[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

# 共通の依存関係をワークスペースレベルで定義
# 各crateは `xxx.workspace = true` で参照できる
[workspace.dependencies]
# エラーハンドリング
thiserror = "2.0"

# 時刻
chrono = { version = "0.4", features = ["serde"] }

# シリアライズ
serde = { version = "1.0", features = ["derive"] }

# UUID
uuid = { version = "1.11", features = ["v4"] }

# Async
async-trait = "0.1"
tokio = { version = "1.42", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Internal crates
oxidize-domain = { path = "crates/domain" }
oxidize-usecase = { path = "crates/usecase" }
