[package]
name = "oxidize"
version.workspace = true
edition.workspace = true

[[bin]]
name = "oxidize"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
oxidize-infrastructure.workspace = true
oxidize-injection.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
sqlx.workspace = true
dotenvy.workspace = true
