[package]
name = "oxidize-infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
oxidize-domain.workspace = true
oxidize-usecase.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
sqlx.workspace = true
clap.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tonic.workspace = true
prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
serde.workspace = true

[build-dependencies]
tonic-build.workspace = true
